# Ergenekon-Adli-Bilisim

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  Ergenekon_Forensics_v1.spec  LICENSE  README.md  amcache_evilhunter.py  build.sh  pyproject.toml  requirements.txt  uareport.py
docs/: VERIFICATION_TEMPLATE.md
ergenekon/: __init__.py
ergenekon/cli/: __init__.py  amcache_cli.py  userassist_cli.py
ergenekon/core/: __init__.py  amcache_engine.py  engine.py  exceptions.py  registry_reader.py  userassist_engine.py
ergenekon/exporters/: __init__.py  amcache_csv.py  amcache_json.py  amcache_markdown.py  amcache_pdf.py  audit_formatter.py  forensic_timeline_html.py  html_report.py  json_report.py  userassist_export.py
ergenekon/parsers/: __init__.py  amcache.py  lnk.py  registry.py  shimcache.py  sigma_rules.py  userassist.py
ergenekon/rules/: sigma_amcache.yml  sigmahq_like_amcache.yml  sigmahq_like_not.yml  sigmahq_like_parentheses.yml  sigmahq_like_quantifiers.yml
ergenekon/utils/: __init__.py  anonymize.py  generate_demo_amcache_hve.py  logger.py  logging_config.py  masker.py  privacy.py  threat_intel.py
scripts/: build_exe.py  prepare-ftools.ps1
